force-app/main/default/objects/Error_Log__c/fields/Limits_CPU_Time_Max__c.field-meta.xml
<CustomField>
    <fullName>Limits_CPU_Time_Max__c</fullName>
    <label>Limits CPU Time Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>