force-app/main/default/objects/Error_Log__c/fields/Limits_CPU_Time_Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>Limits_CPU_Time_Percent_Used__c</fullName>
    <formula>Limits_CPU_Time_Used__c / Limits_CPU_Time_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limits CPU Time Percent Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>