force-app/main/default/objects/Error_Log__c/fields/Limits_DML_Statements_Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>Limits_DML_Statements_Percent_Used__c</fullName>
    <formula>Limits_DML_Statements_Used__c / Limits_DML_Statements_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limits DML Statements Percent Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>