force-app/main/default/objects/Error_Log__c/fields/Limits_DML_Statements_Used__c.field-meta.xml
<CustomField>
    <fullName>Limits_DML_Statements_Used__c</fullName>
    <label>Limits DML Statements Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>