force-app/main/default/objects/Error_Log__c/fields/Limits_Heap_Size_Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>Limits_Heap_Size_Percent_Used__c</fullName>
    <formula>Limits_Heap_Size_Used__c / Limits_Heap_Size_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limits Heap Size Percent Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>