force-app/main/default/objects/Error_Log__c/fields/Limits_Heap_Size_Used__c.field-meta.xml
<CustomField>
    <fullName>Limits_Heap_Size_Used__c</fullName>
    <label>Limits Heap Size Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>