force-app/main/default/objects/Error_Log__c/fields/Limits_SOQL_Queries_Percent_Used__c.field-meta.xml
<CustomField>
    <fullName>Limits_SOQL_Queries_Percent_Used__c</fullName>
    <formula>Limits_SOQL_Queries_Used__c / Limits_SOQL_Queries_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limits SOQL Queries Percent Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>