force-app/main/default/objects/Error_Log__c/fields/Limits_SOQL_Query_Rows_Max__c.field-meta.xml
<CustomField>
    <fullName>Limits_SOQL_Query_Rows_Max__c</fullName>
    <label>Limits SOQL Query Rows Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>