force-app/main/default/objects/Error_Log__c/fields/Max_Limit_Used__c.field-meta.xml
<CustomField>
    <fullName>Max_Limit_Used__c</fullName>
    <formula>MAX( Limits_SOQL_Query_Rows_Percent_Used__c,
     Limits_SOQL_Queries_Percent_Used__c,
     Limits_Heap_Size_Percent_Used__c,
     Limits_CPU_Time_Percent_Used__c,
     Limits_DML_Rows_Percent_Used__c,
     Limits_DML_Statements_Percent_Used__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Limit Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>