force-app/main/default/objects/Error_Log__c/listViews/General.listView-meta.xml
<ListView>
    <fullName>General</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>User__c</columns>
    <columns>Class__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>General</label>
</ListView>